2017-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (untaint_fgets): New function
	* common-src/file.h (untaint_fgets): Add prototype
	* server-src/logfile.c, server-src/server_util.c: Use untaint_fgets

2017-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: Fix deadlock
	* server-src/xfer-source-holding.c: Fix deadlock

2017-09-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (conftoken_getc): Untaint the returned value
	* server-src/xfer-dest-holding.c: Check result of shm_ring_sem_wait

2017-09-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (ambind): Close fds before forking ambind
	* client-src/client_util.c, client-src/selfcheck.c,
	  client-src/senddiscover.c, common-src/ammessage.c,
	  common-src/amxml.c, common-src/security-util.c,
	  server-src/amcheck.c, server-src/driver.c,
	  server-src/server_util.c,
	  server-src/xfer-dest-holding.c: Fix small memory leak
	* ndmp-src/ndml_conn.c: Comment a memory leak

2017-09-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (parse_crc): Set to 0 on error
	* perl/Amanda/Restore.pm: Modify a copy of the header

2017-09-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amsuntar.pl: Typo

2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm: Call release with need_another flag.
	* perl/Amanda/Changer/single.pm (do_release): eject the tevice if
	  need_another

2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm (after_poll): Set $remove_undef_state
	  if $self->{'chg'}->{'scan-require-update'}

2017-09-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c:i Do not cancel the shm_ring if the dump-result
	  is 1 (STRANGE)

2017-09-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendsize.c: If application return '-2 -2' for the