@@ -1,3 +1,9 @@
+2017-09-22  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Vault.pm: Fix for tty output, improve usage output
+	* server-src/amvault.pl: Fix for message 2500008, quiet, and always
+	  quit the taperscan
+	* man/xml-source/amvault.8.xml: Improve man page
+
 2017-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/file.c (untaint_fgets): New function
 	* common-src/file.h (untaint_fgets): Add prototype
